force-app/main/default/objects/CLP_Master__c/fields/Active_Till__c.field-meta.xml
<CustomField>
    <fullName>Active_Till__c</fullName>
    <label>Active Till</label>
    <type>Date</type>
</CustomField>