force-app/main/default/objects/CLP_Master__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CLP Master</relationshipLabel>
    <relationshipName>CLP_Master</relationshipName>
    <type>Lookup</type>
</CustomField>